# funpar-t2-22-project-ligmaboys

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  index.html  setup.sh
.github/workflows/: general.yml
src/: cli.rs  core.rs  entropy_coord.rs  image_reader.rs  main.rs  model.rs
src/data/: colour.rs  direction.rs  grid2d.rs  image_container.rs  mod.rs  sample.rs  vector2.rs
